@@ -3,13 +3,10 @@
 use std::marker::PhantomData;
 
 use rorm_db::transaction::Transaction;
-use rorm_db::{error::Error, Database, Row};
+use rorm_db::{error::Error, Database};
 
 use crate::conditions::Value;
 use crate::crud::builder::TransactionMarker;
-use crate::internal::field::as_db_type::AsDbType;
-use crate::internal::field::FieldProxy;
-use crate::internal::field::{Field, RawField};
 use crate::model::{iter_columns, Model, Patch};
 
 /// Builder for insert queries
@@ -26,11 +23,11 @@ use crate::model::{iter_columns, Model, Patch};
 ///     The database reference's lifetime.
 ///     Since `'rf` applies to a transaction reference, `'db` must outlive `'rf`.
 ///
-/// - `P`: [Patch](Patch)
+/// - `P`: [`Patch`](Patch)
 ///
 ///     The patches to insert.
 ///
-/// - `T`: [TransactionMarker<'rf,' db>](TransactionMarker)
+/// - `T`: [`TransactionMarker<'rf,' db>`](TransactionMarker)
 ///
 ///     An optional transaction to execute this query in.
 ///
@@ -43,7 +40,7 @@ pub struct InsertBuilder<'db, 'rf, P, T, R> {
     _phantom: PhantomData<&'rf P>,
 }
 
-impl<'db, 'rf, P> InsertBuilder<'db, 'rf, P, (), PrimaryKey<P::Model>>
+impl<'db, 'rf, P> InsertBuilder<'db, 'rf, P, (), returning::Patch<P::Model>>
 where
     P: Patch,
 {
@@ -52,7 +49,7 @@ where
         InsertBuilder {
             db,
             transaction: (),
-            returning: PrimaryKey::new(),
+            returning: returning::Patch::new(),
 
             _phantom: PhantomData,
         }
@@ -72,25 +69,34 @@ impl<'db, 'rf, P, R> InsertBuilder<'db, 'rf, P, (), R> {
     }
 }
 
-impl<'db, 'rf, P, T, M> InsertBuilder<'db, 'rf, P, T, PrimaryKey<M>>
+impl<'db, 'rf, P, T, M> InsertBuilder<'db, 'rf, P, T, returning::Patch<M>>
 where
     M: Model,
     P: Patch<Model = M>,
 {
+    /// Remove the return value from the insert query reducing query time.
+    pub fn return_nothing(self) -> InsertBuilder<'db, 'rf, P, T, returning::Nothing> {
+        #[rustfmt::skip]
+        let InsertBuilder { db, transaction, _phantom, .. } = self;
+        #[rustfmt::skip]
+        return InsertBuilder { db, transaction, returning: returning::Nothing, _phantom };
+    }
+
+    /// Remove the return value from the insert query reducing query time.
+    pub fn return_primary_key(self) -> InsertBuilder<'db, 'rf, P, T, returning::PrimaryKey<M>> {
+        #[rustfmt::skip]
+        let InsertBuilder { db, transaction, _phantom, .. } = self;
+        #[rustfmt::skip]
+        return InsertBuilder { db, transaction, returning: returning::PrimaryKey::new(), _phantom };
+    }
+
     /// Set a tuple of fields to be returned after performing the insert
-    ///
-    /// ```skip
-    /// let (some_field, another_field) = insert!(db, SomePatch)
-    ///     .return_tuple((SomeModel::F.some_field, SomeModel::F.another_field))
-    ///     .single(&some_patch)
-    ///     .await?;
-    /// ```
     pub fn return_tuple<Return, const C: usize>(
         self,
         tuple: Return,
-    ) -> InsertBuilder<'db, 'rf, P, T, ReturnTuple<Return, C>>
+    ) -> InsertBuilder<'db, 'rf, P, T, returning::Tuple<Return, C>>
     where
-        ReturnTuple<Return, C>: Returning<M> + From<Return>,
+        returning::Tuple<Return, C>: returning::Returning<M> + From<Return>,
     {
         #[rustfmt::skip]
         let InsertBuilder { db, transaction, _phantom, .. } = self;
@@ -99,21 +105,14 @@ where
     }
 
     /// Set a patch to be returned after performing the insert
-    ///
-    /// ```skip
-    /// let another_patch = insert!(db, SomePatch)
-    ///     .return_patch::<AnotherPatch>()
-    ///     .single(&some_patch)
-    ///     .await?;
-    /// ```
-    pub fn return_patch<Return>(self) -> InsertBuilder<'db, 'rf, P, T, ReturnPatch<Return>>
+    pub fn return_patch<Return>(self) -> InsertBuilder<'db, 'rf, P, T, returning::Patch<Return>>
     where
         Return: Patch<Model = M>,
     {
         #[rustfmt::skip]
         let InsertBuilder { db, transaction, _phantom, .. } = self;
         #[rustfmt::skip]
-        return InsertBuilder { db, transaction, returning: ReturnPatch::new(), _phantom };
+        return InsertBuilder { db, transaction, returning: returning::Patch::new(), _phantom };
     }
 }
 
@@ -122,97 +121,161 @@ where
     'db: 'rf,
     P: Patch,
     T: TransactionMarker<'rf, 'db>,
-    R: Returning<P::Model>,
+    R: returning::Returning<P::Model>,
 {
     /// Insert a single patch into the db
     pub async fn single(self, patch: &'rf P) -> Result<R::Result, Error> {
         let values = Vec::from_iter(iter_columns(patch).map(Value::into_sql));
-        let columns = Vec::from_iter(P::COLUMNS.iter().flatten().cloned());
-        self.db
-            .insert_returning(
-                P::Model::TABLE,
-                &columns,
-                &values,
-                self.transaction.into_option(),
-                self.returning.columns(),
-            )
-            .await
-            .and_then(R::decode)
+        let inserting = Vec::from_iter(P::COLUMNS.iter().flatten().cloned());
+        let returning = self.returning.columns();
+
+        if returning.is_empty() {
+            self.db
+                .insert(
+                    P::Model::TABLE,
+                    &inserting,
+                    &values,
+                    self.transaction.into_option(),
+                )
+                .await?;
+            R::produce_result()
+        } else {
+            self.db
+                .insert_returning(
+                    P::Model::TABLE,
+                    &inserting,
+                    &values,
+                    self.transaction.into_option(),
+                    returning,
+                )
+                .await
+                .and_then(R::decode)
+        }
     }
 
     /// Insert a bulk of patches into the db
     pub async fn bulk(
         self,
         patches: impl IntoIterator<Item = &'rf P>,
-    ) -> Result<Vec<R::Result>, Error> {
+    ) -> Result<R::BulkResult, Error> {
         let mut values = Vec::new();
         for patch in patches {
             values.push(Vec::from_iter(iter_columns(patch).map(Value::into_sql)));
         }
         let values_slices = Vec::from_iter(values.iter().map(Vec::as_slice));
-        let columns = Vec::from_iter(P::COLUMNS.iter().flatten().cloned());
-        self.db
-            .insert_bulk_returning(
-                P::Model::TABLE,
-                &columns,
-                &values_slices,
-                self.transaction.into_option(),
-                self.returning.columns(),
-            )
-            .await
-            .and_then(|rows| {
-                rows.into_iter()
-                    .map(R::decode)
-                    .collect::<Result<Vec<_>, _>>()
-            })
+        let inserting = Vec::from_iter(P::COLUMNS.iter().flatten().cloned());
+        let returning = self.returning.columns();
+
+        if returning.is_empty() {
+            self.db
+                .insert_bulk(
+                    P::Model::TABLE,
+                    &inserting,
+                    &values_slices,
+                    self.transaction.into_option(),
+                )
+                .await?;
+            R::produce_result_bulk()
+        } else {
+            self.db
+                .insert_bulk_returning(
+                    P::Model::TABLE,
+                    &inserting,
+                    &values_slices,
+                    self.transaction.into_option(),
+                    returning,
+                )
+                .await
+                .and_then(R::decode_bulk)
+        }
     }
 }
 
 /// Create an INSERT query.
 ///
-/// 1. Give a reference to your db and the patch type you want to insert instances of.
-///
-///     `insert!(&db, MyPatchType)`
-///
-/// 2. *Optionally* add this query to a transaction
-///
-///     `.transaction(&mut tr)`
-///
-/// 3. Execute the actual query with ether a [single] instance or in a [bulk].
-///
-///     `.single(&my_instance)`
-///
-///     `.bulk(&[one_instances, another_instance])`
-///
-/// Example:
+/// # Basic usage
 /// ```no_run
 /// # use rorm::{Model, Patch, Database, insert};
-/// #
-/// # #[derive(Model)]
-/// # struct User {
-/// #     #[rorm(id)]
-/// #     id: i64,
-/// #
-/// #     #[rorm(max_length = 255)]
-/// #     name: String,
-/// # }
-/// #
-/// # #[derive(Patch)]
-/// # #[rorm(model = "User")]
-/// # struct NewUser {
-/// #     name: String
-/// # }
-/// #
-/// pub async fn create_user(db: &Database, name: String) {
+/// # #[derive(Model)] pub struct User { #[rorm(id)] id: i64, #[rorm(max_length = 255)] name: String, }
+/// # #[derive(Patch)] #[rorm(model = "User")] pub struct NewUser { name: String, }
+/// pub async fn create_single_user(db: &Database, user: &NewUser) {
 ///     insert!(db, NewUser)
+///         .single(user)
+///         .await
+///         .unwrap();
+/// }
+/// pub async fn create_many_users(db: &Database, users: &[NewUser]) {
+///     insert!(db, NewUser)
+///         .bulk(users)
+///         .await
+///         .unwrap();
+/// }
+///```
+///
+/// Like every crud macro `insert!` starts a [builder](InsertBuilder) which is consumed to execute the query.
+///
+/// `insert!`'s first argument is a reference to the [`Database`].
+/// Its second is the [`Patch`] type you want to insert instances of.
+///
+/// Since your [`Model`] type will probably contain a primary key which is set by the database,
+/// you'll rarely insert your actual model instances.
+///
+/// To specify the patch instances use the method [`single`](InsertBuilder::single) or
+/// [`bulk`](InsertBuilder::bulk), which will consume the builder and execute the query.
+///
+/// # Return value
+/// ```no_run
+/// # use rorm::{Model, Patch, Database, insert, Error};
+/// # #[derive(Model)] pub struct User { #[rorm(id)] id: i64, #[rorm(max_length = 255)] name: String, }
+/// # #[derive(Patch)] #[rorm(model = "User")] pub struct NewUser { name: String, }
+/// # pub type UserPatch = NewUser;
+/// pub async fn show_various_returns(db: &Database, user: &NewUser) -> Result<(), Error> {
+///     // Return model instance by default
+///     let _: User = insert!(db, NewUser)
+///         .single(user)
+///         .await?;
+///
+///     // Return any patch instance (including the one used to insert and the model itself)
+///     let _: UserPatch = insert!(db, NewUser)
+///         .return_patch::<UserPatch>() // turbo fish not necessarily required but more readable
+///         .single(user)
+///         .await?;
+///
+///     // Return a tuple of fields
+///     let _: (i64, String) = insert!(db, NewUser)
+///         .return_tuple((User::F.id, User::F.name))
+///         .single(user)
+///         .await?;
+///
+///     // Return the model's primary key
+///     let _: i64 = insert!(db, NewUser)
+///         .return_primary_key()
+///         .single(user)
+///         .await?;
+///
+///     // Return nothing
+///     let _: () = insert!(db, NewUser)
+///         .return_nothing()
+///         .single(user)
+///         .await?;
+///
+///     Ok(())
+/// }
+///```
+///
+/// # Run inside a transaction
+/// ```no_run
+/// # use rorm::{Model, Patch, Database, transaction::Transaction, insert};
+/// # #[derive(Model)] pub struct User { #[rorm(id)] id: i64, #[rorm(max_length = 255)] name: String, }
+/// # #[derive(Patch)] #[rorm(model = "User")] pub struct NewUser { name: String, }
+/// pub async fn create_single_user<'db>(db: &'db Database, transaction: &mut Transaction<'db>, name: String) {
+///     insert!(db, NewUser)
+///         .transaction(transaction) // <-
 ///         .single(&NewUser { name })
 ///         .await
 ///         .unwrap();
 /// }
-/// ```
-///
-/// [single]: InsertBuilder::single
-/// [bulk]: InsertBuilder::bulk
+///```
 #[macro_export]
 macro_rules! insert {
     ($db:expr, $patch:path) => {
@@ -220,117 +283,191 @@ macro_rules! insert {
     };
 }
 
-/// Specifies which columns to return after a select and how to decode the rows into what.
-pub trait Returning<M: Model> {
-    /// Type as which rows should be decoded
-    type Result;
+#[doc(hidden)]
+pub mod returning {
+    use std::marker::PhantomData;
 
-    /// Decode a row
-    fn decode(row: Row) -> Result<Self::Result, Error>;
+    use crate::error::Error;
+    use crate::internal::field::as_db_type::AsDbType;
+    use crate::internal::field::{Field, FieldProxy, RawField};
+    use crate::model::{Model, Patch as ModelPatch};
+    use crate::row::Row;
 
-    /// Columns to query
-    fn columns(&self) -> &[&'static str];
-}
+    /// Specifies which columns to return after a select and how to decode the rows into what.
+    pub trait Returning<M: Model> {
+        /// Type as which rows should be decoded
+        type Result;
 
-/// The default [Returning] behaviour: return the primary key
-pub struct PrimaryKey<M> {
-    columns: [&'static str; 1],
-    model: PhantomData<M>,
-}
-impl<M: Model> PrimaryKey<M> {
-    const fn new() -> Self {
-        Self {
-            columns: [M::Primary::NAME],
-            model: PhantomData,
+        /// Type as which lists of rows should be decoded
+        ///
+        /// This defaults to `Vec<Self::Result>`.
+        type BulkResult;
+
+        /// Produce a result when [Self::columns] returns an empty slice and no actual row could be retrieved.
+        fn produce_result() -> Result<Self::Result, Error> {
+            Err(Error::DecodeError("No columns where specified".to_string()))
+        }
+
+        /// Produce a bulk result when [Self::columns] returns an empty slice and no actual rows could be retrieved.
+        fn produce_result_bulk() -> Result<Self::BulkResult, Error> {
+            Err(Error::DecodeError("No columns where specified".to_string()))
+        }
+
+        /// Decode a single row
+        fn decode(row: Row) -> Result<Self::Result, Error>;
+
+        /// Decode many rows
+        ///
+        /// This default to `rows.into_iter().map(Self::decode).collect()`.
+        fn decode_bulk(rows: Vec<Row>) -> Result<Self::BulkResult, Error>;
+
+        /// Columns to query
+        fn columns(&self) -> &[&'static str];
+    }
+
+    /// Add the default implementation for the bulk members of [Returning]
+    /// i.e. just apply the single impl to a [Vec].
+    macro_rules! default_bulk_impl {
+        () => {
+            type BulkResult = Vec<Self::Result>;
+
+            fn decode_bulk(rows: Vec<Row>) -> Result<Self::BulkResult, Error> {
+                rows.into_iter().map(Self::decode).collect()
+            }
+        };
+    }
+
+    /// The [Returning] for nothing.
+    pub struct Nothing;
+
+    impl<M: Model> Returning<M> for Nothing {
+        type Result = ();
+        type BulkResult = ();
+
+        fn produce_result() -> Result<Self::Result, Error> {
+            Ok(())
+        }
+
+        fn produce_result_bulk() -> Result<Self::BulkResult, Error> {
+            Ok(())
+        }
+
+        fn decode(_row: Row) -> Result<Self::Result, Error> {
+            unreachable!("returning::Nothing::columns should return an empty slice")
+        }
+
+        fn decode_bulk(_rows: Vec<Row>) -> Result<Self::BulkResult, Error> {
+            unreachable!("returning::Nothing::columns should return an empty slice")
+        }
+
+        fn columns(&self) -> &[&'static str] {
+            &[]
         }
     }
-}
-impl<M: Model> Returning<M> for PrimaryKey<M> {
-    type Result = <M::Primary as Field>::Type;
 
-    fn decode(row: Row) -> Result<Self::Result, Error> {
-        Ok(<M::Primary as Field>::Type::from_primitive(row.get(0)?))
+    /// The default [Returning] behaviour: return the primary key
+    pub struct PrimaryKey<M> {
+        columns: [&'static str; 1],
+        model: PhantomData<M>,
     }
 
-    fn columns(&self) -> &[&'static str] {
-        &self.columns
-    }
-}
-
-/// The [Returning] for patches.
-pub struct ReturnPatch<P: Patch> {
-    patch: PhantomData<P>,
-    columns: Vec<&'static str>,
-}
-impl<P: Patch> ReturnPatch<P> {
-    /// Create a SelectPatch
-    pub fn new() -> Self {
-        Self {
-            patch: PhantomData,
-            columns: P::COLUMNS.iter().flatten().copied().collect(),
+    impl<M: Model> PrimaryKey<M> {
+        pub(crate) const fn new() -> Self {
+            Self {
+                columns: [M::Primary::NAME],
+                model: PhantomData,
+            }
         }
     }
-}
-impl<P: Patch> Default for ReturnPatch<P> {
-    fn default() -> Self {
-        Self::new()
-    }
-}
-impl<M: Model, P: Patch<Model = M>> Returning<M> for ReturnPatch<P> {
-    type Result = P;
 
-    fn decode(row: Row) -> Result<Self::Result, Error> {
-        P::from_row_using_position(row)
+    impl<M: Model> Returning<M> for PrimaryKey<M> {
+        default_bulk_impl!();
+
+        type Result = <M::Primary as Field>::Type;
+
+        fn decode(row: Row) -> Result<Self::Result, Error> {
+            Ok(<M::Primary as Field>::Type::from_primitive(row.get(0)?))
+        }
+
+        fn columns(&self) -> &[&'static str] {
+            &self.columns
+        }
     }
 
-    fn columns(&self) -> &[&'static str] {
-        &self.columns
+    /// The [Returning] for patches.
+    pub struct Patch<P: ModelPatch> {
+        patch: PhantomData<P>,
+        columns: Vec<&'static str>,
     }
-}
 
-/// The [Returning] for tuple
-///
-/// Implemented for tuple of size 8 or less.
-pub struct ReturnTuple<T, const C: usize> {
-    #[allow(dead_code)]
-    tuple: T,
-    columns: [&'static str; C],
-}
-macro_rules! impl_select_tuple {
-    ($C:literal, ($($F:ident @ $i:literal),+)) => {
-        impl<$($F: Field),+> From<($(FieldProxy<$F, $F::Model>,)+)> for ReturnTuple<($(FieldProxy<$F, $F::Model>,)+), $C> {
-            fn from(tuple: ($(FieldProxy<$F, $F::Model>,)+)) -> Self {
-                Self {
-                    tuple,
-                    columns: [$(
-                        $F::NAME,
-                    )+],
+    impl<P: ModelPatch> Patch<P> {
+        pub(crate) fn new() -> Self {
+            Self {
+                patch: PhantomData,
+                columns: P::COLUMNS.iter().flatten().copied().collect(),
+            }
+        }
+    }
+
+    impl<M: Model, P: ModelPatch<Model = M>> Returning<M> for Patch<P> {
+        default_bulk_impl!();
+
+        type Result = P;
+
+        fn decode(row: Row) -> Result<Self::Result, Error> {
+            P::from_row_using_position(row)
+        }
+
+        fn columns(&self) -> &[&'static str] {
+            &self.columns
+        }
+    }
+
+    /// The [Returning] for tuple
+    ///
+    /// Implemented for tuple of size 8 or less.
+    pub struct Tuple<T, const C: usize> {
+        #[allow(dead_code)]
+        tuple: T,
+        columns: [&'static str; C],
+    }
+    macro_rules! impl_select_tuple {
+        ($C:literal, ($($F:ident @ $i:literal),+)) => {
+            impl<$($F: Field),+> From<($(FieldProxy<$F, $F::Model>,)+)> for Tuple<($(FieldProxy<$F, $F::Model>,)+), $C> {
+                fn from(tuple: ($(FieldProxy<$F, $F::Model>,)+)) -> Self {
+                    Self {
+                        tuple,
+                        columns: [$(
+                            $F::NAME,
+                        )+],
+                    }
                 }
             }
-        }
-        impl<M: Model, $($F: Field<Model = M>),+> Returning<M> for ReturnTuple<($(FieldProxy<$F, M>,)+), $C>
-        {
-            type Result = ($(
-                $F::Type,
-            )+);
+            impl<M: Model, $($F: Field<Model = M>),+> Returning<M> for Tuple<($(FieldProxy<$F, M>,)+), $C> {
+                default_bulk_impl!();
 
-            fn decode(row: Row) -> Result<Self::Result, Error> {
-                Ok(($(
-                    $F::Type::from_primitive(row.get($i)?),
-                )+))
-            }
+                type Result = ($(
+                    $F::Type,
+                )+);
 
-            fn columns(&self) -> &[&'static str] {
-                &self.columns
+                fn decode(row: Row) -> Result<Self::Result, Error> {
+                    Ok(($(
+                        $F::Type::from_primitive(row.get($i)?),
+                    )+))
+                }
+
+                fn columns(&self) -> &[&'static str] {
+                    &self.columns
+                }
             }
-        }
-    };
+        };
+    }
+    impl_select_tuple!(1, (A @ 0));
+    impl_select_tuple!(2, (A @ 0, B @ 1));
+    impl_select_tuple!(3, (A @ 0, B @ 1, C @ 2));
+    impl_select_tuple!(4, (A @ 0, B @ 1, C @ 2, D @ 3));
+    impl_select_tuple!(5, (A @ 0, B @ 1, C @ 2, D @ 3, E @ 4));
+    impl_select_tuple!(6, (A @ 0, B @ 1, C @ 2, D @ 3, E @ 4, F @ 5));
+    impl_select_tuple!(7, (A @ 0, B @ 1, C @ 2, D @ 3, E @ 4, F @ 5, G @ 6));
+    impl_select_tuple!(8, (A @ 0, B @ 1, C @ 2, D @ 3, E @ 4, F @ 5, G @ 6, H @ 7));
 }
-impl_select_tuple!(1, (A @ 0));
-impl_select_tuple!(2, (A @ 0, B @ 1));
-impl_select_tuple!(3, (A @ 0, B @ 1, C @ 2));
-impl_select_tuple!(4, (A @ 0, B @ 1, C @ 2, D @ 3));
-impl_select_tuple!(5, (A @ 0, B @ 1, C @ 2, D @ 3, E @ 4));
-impl_select_tuple!(6, (A @ 0, B @ 1, C @ 2, D @ 3, E @ 4, F @ 5));
-impl_select_tuple!(7, (A @ 0, B @ 1, C @ 2, D @ 3, E @ 4, F @ 5, G @ 6));
-impl_select_tuple!(8, (A @ 0, B @ 1, C @ 2, D @ 3, E @ 4, F @ 5, G @ 6, H @ 7));
