@@ -2,6 +2,11 @@ Since 0.4.2
 -----------
 - Pinned chrono to >= 0.4.20. See [RUSTSEC](https://rustsec.org/advisories/RUSTSEC-2020-0159.html) for further information
 
+- insert!
+  - Added `.return_nothing()` and `.return_primary_key()`
+  - Defaults to returning whole model instead of primary key
+  - Updated `insert!`'s docs
+
 Notes for publishing
 --------------------
 - don't forget to bump and publish rorm-macro!
